fleet-examples/nginx2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:

      # 🔹 INIT CONTAINER (CLAVE)
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-storage
              mountPath: /usr/share/nginx/html

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
